fix logo spacing on login

--- a/app/assets/stylesheets/zammad.css.scss
+++ b/app/assets/stylesheets/zammad.css.scss
@@ -1669,7 +1669,7 @@ kbd {
   left: 0;
   right: 0;
   
-  .logo {
+  .icon-logo {
     margin-right: 8px;
     margin-top: -11px;
   }
